# lollab

./: README.md  pyproject.toml
data/: lol_wiki_items_2023_03_10.json  lol_wiki_items_2023_03_10.lua
lollab/notebooks/: katara_build_evaluator.ipynb  katarina_build_evaluator.ipynb
lollab/notebooks/.ipynb_checkpoints/: katara_build_evaluator-checkpoint.ipynb
scripts/: ddragon.sh
